--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 	<div id="main">
 		<h1><center>{Myco-Memory}</center></h1>
 		<center> <div id="mushroom-container">
-		<div id="mushroom"><center>{Lichens, Fungi, and Slime Molds!}</center></div>
+		<div id="mushroom"><center>{Lichens, Fungi, and Slime Molds}</center></div>
 		<div id="answer-buttons" class="btn-grid"></div>
 		</div></center>
 	</div>
 	<div id="controls">
 		<center><button id="begin">Begin</button>
 		<button id="next">Next</button>
-		<button id="next-set">Next Set</button>
+		<button id="restart">Choose Set</button>
 		<button id="mushroom-btn">Mushrooms</button>
 		<button id="lichen-btn">Lichen</button>
-
 		</center>
 	</div>
 	<div id="results">
